welcome.lessons.welcome.environment.Environment.scala.error
SourceCode:2: error: illegal start of simple expression
a=[1..2]
  ^